--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="lib/ionicons/css/ionicons.css">
   <link rel="stylesheet" type="text/css" href="lib/materialize/dist/css/materialize.css" media="screen,projection"/>
-  <link rel="stylesheet" type="text/css" href="lib/datatable/datatable.css">
+  <link rel="stylesheet" type="text/css" href="lib/datatable.css">
   <link rel="stylesheet" href="styles/styles.css">
   <!-- endbuild -->
 </head>
@@ -26,7 +26,7 @@
   <script src="lib/jquery/dist/jquery.js"></script>
   <script src="lib/underscore/underscore.js"></script>
   <script src="lib/d3/d3.js"></script>
-  <script src="lib/datatable/datatable.js"></script>
+  <script src="lib/datatable.js"></script>
   <script src="lib/materialize/dist/js/materialize.js"></script>
   <script src="app/bundle.js"></script>
   <!-- endbuild -->
